[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helipad"
version = "1.6"
authors = [
	{ name="C Harwick", email="cameron@cameronharwick.com" },
]
description = "An agent-based modeling framework for Python with a shallow learning curve and powerful visualization capabilities."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Visualization"
]
dependencies = ["matplotlib", "pandas", "networkx"]

[project.optional-dependencies]
notebook = ["jupyterlab", "ipywidgets>=8.0", "ipympl"]
geo = ["shapely"]

[project.urls]
"Homepage" = "https://helipad.dev"
"Documentation" = "https://helipad.dev/functions/"
"Source Code" = "https://github.com/charwick/helipad"

[tool.setuptools.packages.find]
include = ["helipad", "sample-models", "sample-notebooks", "helipad.*"]

[tool.setuptools.package-data]
"*" = ["*.css", "*.png", "*.ipynb", "*.po", "*.mo", "*.pot"]